sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:47: error: unclosed comment
/*
^AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() 
^AlgCocktailSort1:10: error: expected class or object definition
{
^